# rookie_pico

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/rookie_pico/: ClosedLoopController.hpp  Commands.hpp  Comms.hpp  Config.hpp  Definitions.hpp  Encoders.hpp  Flag.hpp  Motors.hpp  PicoInterface.hpp  System.hpp  main.h
pico-rover/: CMakeLists.txt  rover_peri.c
pico-rover/include/: comms.h  config.h  definitions.h  main.h  motors.h
pico-rover/rover_peri/: CMakeLists.txt
pico-rover/src/: comms.c  config.c  main.c  motors.c
src/: ClosedLoopController.cpp  Comms.cpp  Config.cpp  Encoders.cpp  Motors.cpp  command_test.cpp  encoder_test.cpp  main.cpp
test/: interface_test.py  pico_interface.py
